2006-07-26 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fail if the user attempts to build the Mozilla
	plug-in without building the GL renderer.

2006-07-26 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fail if libGLU cannot be found and building the GL
	renderer is enabled.

2006-07-26 Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in: Updates for Fedora Core 5.

2006-07-26 Braden McDaniel  <braden@endoframe.com>

	More fixes to support EXTERNPROTOs in
	browser::create_vrml_from_stream.  This includes fixes to the uri
	class such that it can be copied reliably.  (The default copy
	semantics resulted in a bunch of invalid iterators.)

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(externproto): If browser::world_url is empty, resolve relative
	URIs against the current working directory (i.e., call
	create_file_url).
	* src/libopenvrml/openvrml/browser.cpp
	(uri::uri(const uri &)): Defined copy constructor.
	(uri::operator=(const uri &)): Defined assignment operator.
	(create_file_url(const uri &)): Changed semantics to no longer
	check whether the URL actually refers to a valid resource;
	instead, the function simply composes a file URL.
	(externproto_node_metatype::load_proto::operator()()): If
	browser::world_url is empty, resolve relative URIs against the
	current working directory (i.e., call create_file_url).

2006-07-25 Braden McDaniel  <braden@endoframe.com>

	When processing a stream from browser::create_vrml_from_stream,
	resolve EXTERNPROTO URLs relative to the browser::world_url.

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(externproto): Check to see if the URI used to instantiate the
	parser is an anonymous stream (i.e., from
	browser::create_vrml_from_stream) identifier.  If it is, resolve
	relative URLs against browser::world_url instead.
	* src/libopenvrml/openvrml/browser.cpp
	(anonymous_stream_id(const uri &)): Check to see whether a uri is
	an anonymous stream identifier (i.e., from